--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Task Management Portal</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Alatsi&family=Archivo:ital,wght@0,100..900;1,100..900&family=Limelight&display=swap" rel="stylesheet">
-  </head>
+<link href="https://fonts.googleapis.com/css2?family=Limelight&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rowdies:wght@300;400;700&family=Rubik+Dirt&display=swap" rel="stylesheet">  </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
